# aif_course_package

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/aif_course_package/: __init__.py  bandits.py  environments.py  gridworld.py  gridworld_sb3.py  simplemomentum.py  utils.py  wealthmanagement.py  wealthmanager.py
src/aif_course_package/data/: aif_course_asset_data.csv  spy_data.csv
tests/: test_aif_course_package.py
