[tool.poetry]
name = "aif_course_package"
version = "0.1.0"
description = "Collection of code for the AIF course."
authors = ["Ralf Kellner"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gym = "0.23"
stable-baselines3 = "1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
